--- a/Neural Net From Scratch.ipynb
+++ b/Neural Net From Scratch.ipynb
@@ -90,12 +90,12 @@
     "\n",
     "For the hidden layers, we need to choose the number of nodes and the activation function. In this example, I'm going to use the hyperbolic tangent function $\\tanh(x)$. We can also use a sigmoid function $\\sigma(x) = 1/(1+e^{-x})$ but it is easier to train the neural net using $\\tanh$ since it is a \"steaper\" function which is helpful when using gradient decent. Another useful fact about hyperbolic tangent is that its derivative is simple:\n",
     "$$\n",
-    "   {d\\over {dx}}\\tanh(x) = 1 + \\tanh^2(x)\n",
+    "   {d\\over dx}\\tanh(x) = 1 + \\tanh^2(x)\n",
     "$$\n",
     "\n",
     "We also want out outputs to represent probabilities, so we want to use a softmax function given by\n",
     "$$\n",
-    "   \\mathrm{softmax}(x_1,\\dots, x_K)_j = {e^{x_j} \\over \\sum_{k=1}^K e^{x_k} } \n",
+    "   \\mathrm{softmax}\\big (x_j\\big |x_1,\\dots, x_K\\big) = \\frac{e^{x_j}}{\\sum_{k=1}^K e^{x_k}} \n",
     "$$\n",
     "Applying the softmax gaurantees that the outputs sum to one and each individual output is bounded by 0 and 1, just like probabilities. \n",
     "\n",
