--- a/Simulations/MonteCarlo_Simulations.Rmd
+++ b/Simulations/MonteCarlo_Simulations.Rmd
@@ -2,7 +2,7 @@
 title: Monte Carlo Simulation
 date: 29 October 2016
 author: Abraham Nassar
-output: pdf_document
+output: github_document
 ---
 ```{r, echo=FALSE}
 # clear variables
