latex isn;t rendering on Git. attempted to fix.

--- a/Simulations/Python/Monte Carlo Integration.ipynb
+++ b/Simulations/Python/Monte Carlo Integration.ipynb
@@ -106,9 +106,9 @@
     "For comparison, we can actually calculate the integral by hand using trig substitution. \n",
     "\\begin{align*}\n",
     "  I &= \\int_0^1\\left ( 1-x^2 \\right)^{3/2}\\;dx \n",
-    "    && \\text{Let $x=\\sin(u)$, then $dx=\\cos(u)\\;du$}\\\\\n",
+    "    && \\text{Let }x=\\sin(u)\\text{, then }dx=\\cos(u)\\;du\\\\\n",
     "    &= \\int_{\\sin^{-1}(0)}^{\\sin^{-1}(1)}\\left ( 1-\\sin^2(u)\\right)^{3/2}\\cos(u)\\;du\n",
-    "    && \\text{Use Pythagorean identitiy: $1-\\sin^2(u)=\\cos^2(u)$.}\\\\    \n",
+    "    && \\text{Use Pythagorean identitiy: }1-\\sin^2(u)=\\cos^2(u).\\\\    \n",
     "    &= \\int_{0}^{\\pi/2}\\left ( \\cos^2(u)\\right)^{3/2}\\cos(u)\\;du\n",
     "    && \\text{ }\\\\\n",
     "    &= \\int_{0}^{\\pi/2}\\cos^4(u)\\;du\n",
@@ -155,13 +155,22 @@
     "               iterations and N=100,000 iterations. If the correctValue is given\n",
     "               a green horixontal line will also be displayed over the boxplots \n",
     "    \"\"\"\n",
-    "    I_1000 = map(lambda i: MonteCarloApprox(h, dist, N=1000), range(100))      # 100 Approximation with N=100\n",
-    "    I_10000 = map(lambda i: MonteCarloApprox(h, dist, N=10000), range(100))    # 100 Approximation with N=1000\n",
-    "    I_100000 = map(lambda i: MonteCarloApprox(h, dist, N=100000), range(100))  # 100 Approximation with N=10000\n",
+    "    \n",
+    "    # 100 Approximation with N=100\n",
+    "    I_1000 = map(lambda i: MonteCarloApprox(h, dist, N=1000), range(100))      \n",
     "\n",
+    "    # 100 Approximation with N=1000\n",
+    "    I_10000 = map(lambda i: MonteCarloApprox(h, dist, N=10000), range(100))    \n",
+    "    \n",
+    "    # 100 Approximation with N=10000\n",
+    "    I_100000 = map(lambda i: MonteCarloApprox(h, dist, N=100000), range(100))  \n",
+    "    \n",
+    "    # Creating boxplots\n",
     "    plt.figure(figsize=[6,4])\n",
     "    plt.boxplot([I_1000,I_10000,I_100000], labels=[\"N=1,000\",\"N=10,000\",\"N=100,000\"])\n",
     "    plt.title(\"Boxplot of Monte Carlo Approximations\")\n",
+    "    \n",
+    "    # Plotting the correct values\n",
     "    if correctValue is not None:\n",
     "        plt.axhline(y=correctValue, color=\"g\", ls=\"--\", lw=2, label=\"Correct Value\")\n",
     "        plt.legend()\n",
@@ -234,7 +243,11 @@
   }
  ],
  "metadata": {
-  "anaconda-cloud": {},
+  "anaconda-cloud": {
+   "attach-environment": true,
+   "summary": "Monte Carlo Integration",
+   "url": "https://anaconda.org/abenassar/monte-carlo-integration"
+  },
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
