--- a/Simulations/Python/Monte Carlo Integration.ipynb
+++ b/Simulations/Python/Monte Carlo Integration.ipynb
@@ -104,7 +104,8 @@
    "metadata": {},
    "source": [
     "For comparison, we can actually calculate the integral by hand using trig substitution. \n",
-    "\\begin{align*}\n",
+    "\n",
+    "\\begin{align}\n",
     "  I &= \\int_0^1\\left ( 1-x^2 \\right)^{3/2}\\;dx \n",
     "    && \\text{Let }x=\\sin(u)\\text{, then }dx=\\cos(u)\\;du\\\\\n",
     "    &= \\int_{\\sin^{-1}(0)}^{\\sin^{-1}(1)}\\left ( 1-\\sin^2(u)\\right)^{3/2}\\cos(u)\\;du\n",
@@ -118,7 +119,8 @@
     "    &= \\int_{0}^{\\pi/2} \\frac{1}{4} \\left[1+2\\cos(2u) + \\frac{1}{2}+\\frac{1}{2}\\cos(4u)\\right] du\\\\\n",
     "    &= \\frac{1}{4} \\left[u + \\sin(2u) + \\frac{1}{2}u+\\frac{1}{8}\\sin(4u)\\right]_{u=0}^{u=\\pi/2}\\\\\n",
     "    &= \\frac{3\\pi}{16}\n",
-    "\\end{align*}\n",
+    "\\end{align}\n",
+    "\n",
     "So we know the true value of the integral is $3\\pi/16$. Note how tedious this integral was and this is a relatively easy integral to evaluate. Many integrals you might come across are impossible to do by hand, so we see why Monte Carlo integration is useful. \n",
     "\n",
     "Now let's run simulations to see how close we get to the correct value of $3\\pi/16$. I'll calculate 100 approximation with different values of $N$. Namely, I'll use $N=1,000$, $N=10,000$ and $N=100,000$ and compare the box plots. "
