Fixed Typos in Inverse CDF notebook that cause incorrect renderin on github.

--- a/Simulations/Python/Inverse CDF method.ipynb
+++ b/Simulations/Python/Inverse CDF method.ipynb
@@ -77,6 +77,7 @@
     "\\end{align*}\n",
     "\n",
     "So the CDF is the following:\n",
+    "\n",
     "\\begin{align*}\n",
     "  F_X(x) &= \\begin{cases}\n",
     "           0           & \\text{if }x < 0  \\\\\n",
@@ -211,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next question is how good are these samples? WE can check this by smapling 10,000 point and then we can plot a histogram and see how closely it follows the PDF."
+    "The next question is how good are these samples? We can check this by smapling 10,000 point and then we can plot a histogram and see how closely it follows the PDF."
    ]
   },
   {
