Removed warning message from Bayesian Regression notbook.

--- a/Bayesian Regression with PyStan.ipynb
+++ b/Bayesian Regression with PyStan.ipynb
@@ -109,7 +109,7 @@
    "cell_type": "code",
    "execution_count": 163,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
