Updated Word Tagger notebook.

--- a/HMM-WordTagger/HMM-WordTagger.ipynb
+++ b/HMM-WordTagger/HMM-WordTagger.ipynb
@@ -411,17 +411,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This means that given that the current tag is "
+    "This means that given that the current tag is in the state `START -> AT`, the probability of getting the word `The` is about 78%."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
