--- a/HMM-WordTagger/HMM-WordTagger.ipynb
+++ b/HMM-WordTagger/HMM-WordTagger.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -51,12 +51,51 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import nltk\n",
+    "import re\n",
     "from nltk.corpus import brown"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The brown corpus contain about a million tagged words you can see descriptioins of the tags using `nltk.help.brown_tagset()`. To easy make things a bit easier, I'll convert all words to lowercase. This mean that \"Cow\" and \"cow\" are treated as the same word instead of different words which results in a smaller emission matrix. I'll also only use the base form of the tag, which means that `DO+PPSS` and `DO*` are both converted to `DO`. This has the effect if decreasing the transition matrix and the emission matrix. First let me define a function to pull the base tag."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def getBaseTag(tagString):\n",
+    "    \"\"\"Gets a simple version of an input tag. \n",
+    "    \n",
+    "    Example:\n",
+    "    >>> getTag(\"WDT+BER+PP\")\n",
+    "    [1] 'WDT'\n",
+    "    >>> getTag(\"--\")\n",
+    "    [2] '--'\n",
+    "      \n",
+    "    Input:\n",
+    "      tagString (str): The full tag\n",
+    "\n",
+    "    Output:\n",
+    "      str: if `tagString` is a word tag, it returns the base of the tag\n",
+    "        if `tagString` is a punctuation tag, it returns `tagString`\n",
+    "    \"\"\"\n",
+    "    reTag = re.search(\"[A-Z]+\", tagString, flags=0)\n",
+    "    if reTag:\n",
+    "        return reTag.group(0)\n",
+    "    else:\n",
+    "        return tagString"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -70,7 +109,7 @@
     "    brown_tags_words.append( (\"START\", \"START\") )\n",
     "    # then all the tag/word pairs for the word/tag pairs in the sentence.\n",
     "    # shorten tags to 2 characters each\n",
-    "    brown_tags_words.extend([ (tag, word) for (word, tag) in sent ])\n",
+    "    brown_tags_words.extend([ (getBaseTag(tag), word) for (word, tag) in sent ])\n",
     "    # then END/END\n",
     "    brown_tags_words.append( (\"END\", \"END\") )    \n",
     "    brown_tags_words.append( (\"END\", \"END\") )\n",
@@ -79,7 +118,7 @@
     "brown_df = pd.DataFrame({\"words\":list(map(lambda x: x[1], brown_tags_words)),\n",
     "                         \"tags\" :list(map(lambda x: x[0], brown_tags_words))})\n",
     "\n",
-    "del brown_tags_words # no longer needed"
+    "del brown_tags_words, brown # no longer needed"
    ]
   },
   {
@@ -91,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -126,22 +165,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>NP-TL</td>\n",
+       "      <td>NP</td>\n",
        "      <td>Fulton</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>NN-TL</td>\n",
+       "      <td>NN</td>\n",
        "      <td>County</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>JJ-TL</td>\n",
+       "      <td>JJ</td>\n",
        "      <td>Grand</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>NN-TL</td>\n",
+       "      <td>NN</td>\n",
        "      <td>Jury</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -168,16 +207,16 @@
        "0  START   START\n",
        "1  START   START\n",
        "2     AT     The\n",
-       "3  NP-TL  Fulton\n",
-       "4  NN-TL  County\n",
-       "5  JJ-TL   Grand\n",
-       "6  NN-TL    Jury\n",
+       "3     NP  Fulton\n",
+       "4     NN  County\n",
+       "5     JJ   Grand\n",
+       "6     NN    Jury\n",
        "7    VBD    said\n",
        "8     NR  Friday\n",
        "9     AT      an"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -207,14 +246,15 @@
     "                .join(brown_df[[\"tags\",\"words\"]].shift(-2), lsuffix=\"_1\", rsuffix=\"_0\") \\\n",
     "                .dropna()\n",
     "\n",
-    "# This will be used to coutn occurances of each state \n",
+    "# This will be used to count occurances of each state \n",
     "trigram_df[\"counts\"] = np.ones(len(trigram_df))\n",
     "\n",
     "# join two concurent tags that define the states.\n",
     "trigram_df[\"initialState\"] = trigram_df.tags_2 + \" -> \" + trigram_df.tags_1\n",
     "trigram_df.drop('tags_2', axis=1, inplace=True)\n",
     "trigram_df[\"currentState\"] = trigram_df.tags_1 + \" -> \" + trigram_df.tags_0\n",
-    "trigram_df.drop(['tags_1',\"tags_0\"], axis=1, inplace=True)"
+    "trigram_df.drop(['tags_1'], axis=1, inplace=True)\n",
+    "trigram_df.rename(columns={\"tags_0\":\"currentTag\"}, inplace=True)"
    ]
   },
   {
@@ -226,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -239,6 +279,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>currentTag</th>\n",
        "      <th>words</th>\n",
        "      <th>counts</th>\n",
        "      <th>initialState</th>\n",
@@ -248,6 +289,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>AT</td>\n",
        "      <td>The</td>\n",
        "      <td>1.0</td>\n",
        "      <td>START -&gt; START</td>\n",
@@ -255,46 +297,50 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>NP</td>\n",
        "      <td>Fulton</td>\n",
        "      <td>1.0</td>\n",
        "      <td>START -&gt; AT</td>\n",
-       "      <td>AT -&gt; NP-TL</td>\n",
+       "      <td>AT -&gt; NP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>NN</td>\n",
        "      <td>County</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>AT -&gt; NP-TL</td>\n",
-       "      <td>NP-TL -&gt; NN-TL</td>\n",
+       "      <td>AT -&gt; NP</td>\n",
+       "      <td>NP -&gt; NN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>JJ</td>\n",
        "      <td>Grand</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>NP-TL -&gt; NN-TL</td>\n",
-       "      <td>NN-TL -&gt; JJ-TL</td>\n",
+       "      <td>NP -&gt; NN</td>\n",
+       "      <td>NN -&gt; JJ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>NN</td>\n",
        "      <td>Jury</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>NN-TL -&gt; JJ-TL</td>\n",
-       "      <td>JJ-TL -&gt; NN-TL</td>\n",
+       "      <td>NN -&gt; JJ</td>\n",
+       "      <td>JJ -&gt; NN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    words  counts    initialState    currentState\n",
-       "0     The     1.0  START -> START     START -> AT\n",
-       "1  Fulton     1.0     START -> AT     AT -> NP-TL\n",
-       "2  County     1.0     AT -> NP-TL  NP-TL -> NN-TL\n",
-       "3   Grand     1.0  NP-TL -> NN-TL  NN-TL -> JJ-TL\n",
-       "4    Jury     1.0  NN-TL -> JJ-TL  JJ-TL -> NN-TL"
+       "  currentTag   words  counts    initialState currentState\n",
+       "0         AT     The     1.0  START -> START  START -> AT\n",
+       "1         NP  Fulton     1.0     START -> AT     AT -> NP\n",
+       "2         NN  County     1.0        AT -> NP     NP -> NN\n",
+       "3         JJ   Grand     1.0        NP -> NN     NN -> JJ\n",
+       "4         NN    Jury     1.0        NN -> JJ     JJ -> NN"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -333,12 +379,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we have the transition matrix in the form of a dataframe. Which is a large sparce matrix that is too ugly to show, but if I want to find what percentage of times the sequence `NN-TL`, `VBD` was preceded by `NR`, I just look for the initial state of `'NN-TL -> VBD'` and current state of `'VBD -> NR'` like so:"
+    "Now we have the transition matrix in the form of a dataframe. Which is a large sparce matrix that is too ugly to show, but if I want to find what percentage of times the sequence `NN`, `VBD` was preceded by `NR`, I just look for the initial state of `'NN -> VBD'` and current state of `'VBD -> NR'` like so:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -346,23 +392,23 @@
     {
      "data": {
       "text/plain": [
-       "0.022388059701492536"
+       "0.0045772751750134625"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "transitionDF[\"VBD -> NR\"][\"NN-TL -> VBD\"]"
+    "transitionDF[\"VBD -> NR\"][\"NN -> VBD\"]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Which means that from the state `'NN-TL -> VBD'`, the next state was `'VBD -> NR'` about 2.2% of the time. Mathematically, this is the same as ${\\mathbb{P}(t_k={\\tt NR} \\,|\\, t_{k-2}={\\tt NN-TL}, t_{k-1}={\\tt VBD})}$\n",
+    "Which means that from the state `'NN-TL -> VBD'`, the next state was `'VBD -> NR'` about 0.46% of the time. Mathematically, this is the same as ${\\mathbb{P}(t_k={\\tt NR} \\,|\\, t_{k-2}={\\tt NN}, t_{k-1}={\\tt VBD})}$\n",
     "\n",
     "## Calculating The Emission Matrix\n",
     "The emission matrix will the contain the probabilities of having a certain work given the current state, which recall is the previous tag followed by the current tag. "
@@ -370,15 +416,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "emissionDF = trigram_df[[\"words\", \"currentState\", \"counts\"]] \\\n",
+    "emissionDF = trigram_df[[\"words\", \"currentTag\", \"counts\"]] \\\n",
     "    .pivot_table(columns=\"words\", \n",
-    "                       index=\"currentState\", \n",
+    "                       index=\"currentTag\", \n",
     "                       values=\"counts\", \n",
     "                       fill_value=0,\n",
     "                       aggfunc=np.sum) \\\n",
@@ -387,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -395,24 +441,46 @@
     {
      "data": {
       "text/plain": [
-       "0.77582258647703994"
+       "0.63294205516921187"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "emissionDF[\"The\"][\"START -> AT\"]"
+    "emissionDF[\"the\"][\"AT\"]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This means that given that the current tag is in the state `START -> AT`, the probability of getting the word `The` is about 78%."
+    "This means that given that the current tag is in the state `\"AT\"`, the probability of getting the word `\"the\"` is about 71%. This is equivalent to $\\mathbb{P}(w_k={\\tt The} \\;|\\; t_k = {\\tt AT})$."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "wordCounts = trigram_df[[\"words\",\"counts\"]] \\\n",
+    "  .groupby(\"words\") \\\n",
+    "  .sum().unstack()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
