Fixed Latex Typo.

--- a/HMM-WordTagger/HMM-WordTagger.ipynb
+++ b/HMM-WordTagger/HMM-WordTagger.ipynb
@@ -40,9 +40,9 @@
     "\n",
     "With the joint probability distribution in hand, it is easy to find conditional distributions. We specifically want $P(t_1, \\dots, t_K|w_1, \\dots, w_K)$ because we can choose the best tag sequence $\\{t_k^*\\}_{k=1}^{K}$ to be the sequnce that maximizes the conditioninal distribution probability. \n",
     "\n",
-    "$$\n",
+    "\\begin{align*}\n",
     "  \\{t_k^*\\}_{k=1}^{K} = \\mathop{\\text{argmax}}_{t_1,\\dots,t_K} P(t_1, \\dots, t_K|w_1, \\dots, w_K)\n",
-    "$$\n"
+    "\\end{align*}\n"
    ]
   },
   {
