--- a/HMM-WordTagger/HMM-WordTagger.ipynb
+++ b/HMM-WordTagger/HMM-WordTagger.ipynb
@@ -42,7 +42,9 @@
     "\n",
     "\\begin{align*}\n",
     "  \\{t_k^*\\}_{k=1}^{K} = \\mathop{\\text{argmax}}_{t_1,\\dots,t_K} P(t_1, \\dots, t_K|w_1, \\dots, w_K)\n",
-    "\\end{align*}\n"
+    "\\end{align*}\n",
+    "\n",
+    "We will use the following lbraries for this task."
    ]
   },
   {
